translating a bit more

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <!-- Default List -->
         <div class="country-list">
           <h5>
-            Países (<span id="countCountries">0</span
+            Contries (<span id="countCountries">0</span
             ><span id="qttCountries" style="display: none">0</span>)
           </h5>
           <h6>
